# awesome-llm-apps

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  Anotherfix  CHANGELOG.md  CONTRIBUTING.md  EXAMPLE_ENHANCED_AGENT.py  FIXES.md  GETTING_STARTED.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PROJECT_ANALYSIS_REPORT.md  QUICK_START.md  README.MD  README.md  README.md3  RELEASE_NOTES.md  SMOKE_TEST.md  TROUBLESHOOTING.md  ai_HirePilot_agent .json  desktop.ini  documentation-improvements.patch  filelist.txt  index.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  runtime.txt  smoke_run.sh
.claude/: settings.local.json
.streamlit/: config.toml
advanced_ai_agents/multi-gen-agent/: .gitignore  README.md  langgraph.json  pyproject.toml  test.py
advanced_ai_agents/multi-gen-agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
advanced_ai_agents/multi-gen-agent/src/imageagents/: __init__.py  graph.py  models.py  prompts.py  state.py
advanced_ai_agents/multi_agent_apps/agent_teams/ai_travel_planner_agent_team/backend/: .env.example  Dockerfile  broswer.py  docker.sh  main.py  pyproject.toml
advanced_ai_agents/multi_agent_apps/agent_teams/ai_travel_planner_agent_team/backend/agents/: README.md  budget.py  destination.py  flight.py  food.py  hotel.py  itinerary.py  structured_output.py  team.py
advanced_ai_agents/multi_agent_apps/agent_teams/ai_travel_planner_agent_team/backend/api/: __init__.py  app.py
advanced_ai_agents/multi_agent_apps/agent_teams/ai_travel_planner_agent_team/backend/config/: llm.py  logger.py
advanced_ai_agents/multi_agent_apps/agent_teams/ai_travel_planner_agent_team/backend/migrations/: create_plan_tasks_table.sql  create_trip_plan_tables.sql
advanced_ai_agents/multi_agent_apps/agent_teams/ai_travel_planner_agent_team/backend/models/: flight.py  hotel.py  plan_task.py  travel_plan.py  trip_db.py
advanced_ai_agents/multi_agent_apps/agent_teams/ai_travel_planner_agent_team/backend/repository/: plan_task_repository.py  trip_plan_repository.py
advanced_ai_agents/multi_agent_apps/agent_teams/ai_travel_planner_agent_team/backend/router/: plan.py
advanced_ai_agents/multi_agent_apps/agent_teams/ai_travel_planner_agent_team/backend/services/: db_service.py  plan_service.py
advanced_ai_agents/multi_agent_apps/agent_teams/ai_travel_planner_agent_team/backend/tools/: google_flight.py  kayak_flight.py  kayak_hotel.py  scrape.py
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/: .env.example  .gitignore  Dockerfile.attacker  README.md  docker-compose.yml  mcp_config.json  pyproject.toml  requirements.txt  run_mcp.ps1  run_mcp.sh
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/frontend/: __init__.py  streamlit_app.py
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/frontend/.streamlit/: config.toml
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/frontend/cli/: cli.py
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/frontend/pages/: 01_Chat.py  02_📋_Chat_History.py
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/frontend/static/config/: agents.json
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/frontend/static/css/: agent_status.css  base_theme.css  chat_ui.css  dark_theme.css  dark_theme.toml  input_fix.css  layout.css  light_theme.css  light_theme.toml  model_info.css  model_selection.css  terminal.css
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/frontend/web/: __init__.py
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/frontend/web/components/: __init__.py  chat_history.py  chat_messages.py  model_selection.py  sidebar.py  terminal_ui.py  theme_ui.py
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/frontend/web/core/: __init__.py  app_state.py  chat_replay.py  executor.py  executor_manager.py  history_manager.py  message_processor.py  model_manager.py  terminal_processor.py  workflow_handler.py
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/frontend/web/utils/: __init__.py  config.py  constants.py  float.py  validation.py
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/src/graphs/: swarm.py
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/src/prompts/: prompt_loader.py
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/src/tools/: handoff.py
advanced_ai_agents/multi_agent_apps/ai_vibe_hacking_agent_team/src/utils/: agents.py  executor.py  memory.py  message.py
advanced_ai_agents/single_agent_apps/windows_use_autonomous_agent/: .env-example  MANIFEST.in  README.md  main.py  pyproject.toml
advanced_ai_agents/single_agent_apps/windows_use_autonomous_agent/tests/: test_shell_policy.py
advanced_ai_agents/single_agent_apps/windows_use_autonomous_agent/windows_use/agent/: __init__.py  service.py  utils.py  views.py
advanced_ai_agents/single_agent_apps/windows_use_autonomous_agent/windows_use/desktop/: __init__.py  config.py  shell_policy.py  views.py
advanced_ai_agents/single_agent_apps/windows_use_autonomous_agent/windows_use/tree/: __init__.py  config.py  views.py
ai_agent_tutorials/ai_business_insider/news_summarizer_analyzer/: .gitignore  README.md  pyproject.toml
ai_agent_tutorials/ai_business_insider/news_summarizer_analyzer/src/news_summarizer_analyzer/: crew.py  main.py  streamlit_app.py  test_analyzer.py
ai_agent_tutorials/ai_business_insider/news_summarizer_analyzer/tests/: test.py  test_fact_checker.py  test_summary_writer.py
generative_ui_agents/ai-shadcn-component-generator/apps/agent/: main.py  pyproject.toml
generative_ui_agents/ai-shadcn-component-generator/apps/agent/src/: bounded_memory_saver.py  middleware.py  patches.py  search.py
rag_tutorials/corrective_rag/: README.md  corrective_rag.py  pyproject.toml  requirements.txt
voice_ai_agents/customer_support_voice_agent/: README.md  customer_support_voice_agent.py  pyproject.toml  requirements.txt
(+3077 files in other folders)
