[project]
name = "corrective-rag"
version = "0.1.0"
description = "Corrective RAG Agent - A sophisticated Retrieval-Augmented Generation system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==0.3.12",
    "langgraph==0.2.53",
    "qdrant-client==1.12.1",
    "langchain-openai==0.2.14",
    "langchain-anthropic==0.3.0",
    "tavily-python==0.5.0",
    "langchain-community==0.3.12",
    "langchain-core==0.3.28",
    "streamlit==1.46.1",
    "tenacity==8.5.0",
    "anthropic==2.3.0",
    "openai==1.93.0",
    "tiktoken>=0.6.0",
    "pydantic==2.11.7",
    "numpy==2.3.1",
    "PyYAML>=6.0.0",
    "nest-asyncio>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"