[tool.poetry]
name = "news_summarizer_analyzer"
version = "0.1.0"
description = "news-summarizer-analyzer using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.0.1"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
news_summarizer_analyzer = "news_summarizer_analyzer.main:run"
run_crew = "news_summarizer_analyzer.main:run"
train = "news_summarizer_analyzer.main:train"
replay = "news_summarizer_analyzer.main:replay"
test = "news_summarizer_analyzer.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
